Upgrade Kotlin and coroutines